File pane fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,9 @@
 	.editor-title {
 		display: none !important;
 	}
+	.file-list li.open-folder > ul > li {
+		width: 96% !important;
+	}
 	.editor-container {
 		display: block !important;
 	}
